--- a/frontend/src/Components/Form/Form.css
+++ b/frontend/src/Components/Form/Form.css
@@ -1,7 +1,8 @@
 .form-container {
-    max-width: 600px;
+    max-width: 800px;
     margin: 0 auto;
     padding: 40px;
+    border-radius: 20px;
     background-color: #3D76AF;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 100px;
@@ -46,7 +47,7 @@
 .formbtn {
     color: #3D76AF;
     border: none;
-    padding: 7px 14px 6px 12px;
+    padding: 15px;border-radius: 8px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     width: 100px;
@@ -54,8 +55,11 @@
     background-color: #ffffff;
     font-size: 21px;
     font-weight: 550;
+    width: 100%;
     margin-top: 12px;
 }
+
+textarea, textarea::placeholder{  font-family: 'Inter';}
 
 
 .form-footer {
@@ -82,4 +86,14 @@
     margin: 5px;
     height: 30px;
     width: 30px;
+}
+
+@media only screen and (max-width: 767px) {
+.form-container{padding: 20px 10px;max-width: calc(100% - 24px);}
+.forminput{font-size: 14px;}
+.formheading{margin-block-end: 20px;}
+.formbtn{font-size: 14px;}
+.right-align, .left-align{margin-block-start: 20px;}
+.left-align{font-size: 12px;}
+.right-align img{height: 20px; width: 20px;margin: 2px;}
 }
