--- a/frontend/src/Components/Form/Form.css
+++ b/frontend/src/Components/Form/Form.css
@@ -89,11 +89,12 @@ textarea, textarea::placeholder{  font-family: 'Inter';}
 }
 
 @media only screen and (max-width: 767px) {
-.form-container{padding: 20px 10px;max-width: calc(100% - 24px);}
+.form-container{padding: 20px 10px;max-width: calc(100% - 24px); margin-block-end: 50px;}
 .forminput{font-size: 14px;}
 .formheading{margin-block-end: 20px;}
 .formbtn{font-size: 14px;}
 .right-align, .left-align{margin-block-start: 20px;}
 .left-align{font-size: 12px;}
 .right-align img{height: 20px; width: 20px;margin: 2px;}
+
 }
