--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -1,177 +1,121 @@
- .footer-section {
-   background: #145A98;
-   position: relative;
-   display: flex;
-   flex-direction: column;
-   padding: 24px 0 22px 0;
-   width: 100%;
-   box-sizing: border-box;
- }
+footer {
+  background: #3D76AF;
+  display: flex;
+  padding-block: 40px;
+  padding-inline: 3%;
+  width: 100%;
+  gap: 90px;
+  color: #fff;
+  font-size: 14px;
+}
 
- .logo-2 {
-   background: url('../../assets/images/logo2.jpeg') 50% / cover no-repeat;
-   margin: 0 58px 39px 58px;
-   align-self: flex-start;
-   width: 108px;
-   height: 109px;
- }
+.footer-logo {
+  display: flex;
+  width: 100px;
+  height: 100px;
+  margin-block-end: 20px;
+}
 
- .footer-container {
-   margin: -47px 54.7px 19px 600px;
-   display: flex;
-   flex-direction: row;
-   width: fit-content;
-   box-sizing: border-box;
- }
+.footer-logo img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
 
- .footer-details {
-   margin: 4px -30px 0 55px;
-   display: inline-block;
-   overflow-wrap: break-word;
-   font-family: 'Inter';
-   font-weight: 400;
-   font-size: 20px;
-   line-height: 1.4;
-   color: rgba(255, 255, 255, 0.8);
-   width: 25%;
- }
+.line-1 {
+  background: rgba(255, 255, 255, .5);
+  margin-bottom: 26px;
+  width: 100%;
+  height: 1px
+}
 
- .footer-link {
-   margin: 0px -122px 44px 270px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   box-sizing: border-box;
- }
+.footer-links {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
 
- .footer-link-other {
-   margin-bottom: 2px;
-   display: inline-block;
-   overflow-wrap: break-word;
-   font-family: 'Inter';
-   font-weight: 400;
-   font-size: 20px;
-   line-height: 1.5;
-   color: #FFFFFF;
-   text-align: center;
-   margin-left: -50px;
- }
+.footer-links ul,
+.footer-links ol {
+  list-style: none;
+}
 
- a {
-   text-decoration: none;
-   cursor: pointer;
- }
+.footer-links ul li a {
+  color: #fff;
+  font-size: 14px;
+  text-decoration: none;
+  margin-block-end: 4px;
+  display: block;
+}
 
- .footer-social-link {
-   position: relative;
-   margin: 0 54.9px 33.5px 54.9px;
-   display: flex;
-   flex-direction: row;
-   align-self: flex-end;
-   padding: 0 0 0px 1px;
-   width: fit-content;
-   box-sizing: border-box;
- }
+.footer-links ul li:hover a {
+  text-decoration: underline;
+}
 
- .email-2 {
-   background: url('../../assets/images/email2.png') 50% / cover no-repeat;
-   position: absolute;
-   left: -45px;
-   bottom: 3px;
-   width: 30px;
-   height: 30px;
- }
+.footer-links ol {
+  display: flex;
+  gap: 15px;
+  margin-block-start: 16px;
+}
 
- .email-link {
-   margin: 9px 8.5px 5.5px -9px;
-   display: inline-block;
-   overflow-wrap: break-word;
-   font-family: 'Inter';
-   font-weight: 400;
-   font-size: 20px;
-   color: #FFFFFF;
- }
+.footer-links ol li {
+  height: 30px;
+  width: 30px;
+}
 
- .instagram {
-   background: url('../../assets/images/image5.png') 50% / cover no-repeat;
-   margin: 4px 12px 0 0;
-   bottom: 50px;
-   width: 32px;
-   height: 32px;
- }
+.footer-links ol li img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+}
 
- .instagram-link {
-   margin: 9px 10.5px 5.5px -9px;
-   display: inline-block;
-   overflow-wrap: break-word;
-   font-family: 'Inter';
-   font-weight: 400;
-   font-size: 20px;
-   color: #FFFFFF;
- }
+.copyright {
+  background-color: #145A98;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  color: #fff;
+  padding-block: 10px;
+  padding-inline: 3%;
+}
 
- .whatsapp {
-   background: url('../../assets/images/image6.png') 50% / cover no-repeat;
-   margin: 4px 5px 0 0;
-   width: 32px;
-   height: 32px;
- }
+.copyright p span {
+  color: #000;
+}
 
- .whatsapp-link {
-   margin: 9px 0 5.5px 0;
-   font-family: 'Inter';
-   font-weight: 400;
-   font-size: 20px;
-   color: #FFFFFF;
- }
+@media only screen and (max-width: 991px) {
+  footer {
+    gap: 40px;
+  }
+}
 
+@media only screen and (max-width: 767px) {
+  footer {
+    flex-direction: column;
+    gap: 20px;
+    padding-block: 20px;
+  }
 
+  .footer-logo {
+    height: 67px;
+  }
 
- .line-1 {
-   background: rgba(255, 255, 255, 0.5);
-   margin-bottom: 26px;
-   width: 100%;
-   height: 1px;
- }
+  .footer-description {
+    display: flex;
+  }
 
- .footer-section-2 {
-   margin: 0 54px 0 58px;
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-   width: 1328px;
-   box-sizing: border-box;
- }
+  .footer-logo {
+    margin-inline-end: 16px;
+    margin-block-end: 0px;
+  }
 
- .copyright-section {
-   margin-right: 12px;
-   /* width: 1056.3px; */
-   overflow-wrap: break-word;
-   font-family: 'Inter';
-   font-weight: 400;
-   font-size: 16px;
-   color: #FFFFFF;
- }
+  .footer-links ol {
+    flex-direction: column;
+    align-items: end;
+  }
 
- .powered-by-take-tech-devs {
-   font-family: 'Inter';
-   font-weight: 400;
-   line-height: 1.333;
-   color: #321910;
-   font-size: 16px;
- }
-
- .poweredby {
-   overflow-wrap: break-word;
-   font-family: 'Poppins';
-   font-weight: 400;
-   /* font-size: 20px; */
-   color: #FFFFFF;
- }
-
- .poweredby span {
-   font-family: 'Inter';
-   font-weight: 400;
-   /* font-size: 20px; */
-   line-height: 1.333;
- }
+  .copyright {
+    font-size: 9px;
+    padding-block: 8px;
+  }
+}
