--- a/frontend/src/Components/About/About.css
+++ b/frontend/src/Components/About/About.css
@@ -1,59 +1,3 @@
-.about-us-page .logo-1 {
-    background: url('../../assets/images/logo2.jpeg') 50% / cover no-repeat;
-    margin-bottom: 42.1px;
-    width: 108px;
-    height: 109px;
-    z-index: 1;
-}
-
-.about-us-page a {
-    text-decoration: none;
-}
-
-
-.about-caption {
-    /* margin-left: 54px;
-    margin-right: 65px; */
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    color: #FFFFFF;
-    text-align: center;
-    width: 900px;
-    z-index: 1;
-    padding-top: 20px;
-}
-
-
-.about-us-page .container {
-    margin: 0 0px;
-    display: flex;
-    flex-direction: row;
-    width: fit-content;
-    box-sizing: border-box;
-}
-
-.about-us-page .about-container {
-    margin-bottom: 570.9px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 1374px;
-    box-sizing: border-box;
-}
-
-.about-us-page .about-heading {
-    margin-right: 5.2px;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 600;
-    font-size: 40px;
-    color: #FFFFFF;
-    margin-top: -210px;
-    z-index: 1;
-}
-
 .about-us-page .about-upper {
     background: url('../../assets/images/rectangle41.png') 50% / cover no-repeat, linear-gradient(#D9D9D9, #D9D9D9);
     position: relative;
@@ -64,7 +8,38 @@
     padding: 34px 35px 80px 31px;
     width: 100%;
     box-sizing: border-box;
-    max-height: 100vh;
+    justify-content: center;
+    height: 100vh;
+}
+
+
+.about-us-page .about-upper p {
+    position: relative;
+    z-index: 2;
+    padding-left: 10%;
+    padding-right: 10%;
+    display: inline-block;
+    align-self: flex-start;
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 300;
+    font-size: 24px;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+.about-us-page .about-upper h2 {
+    position: relative;
+    z-index: 2;
+    margin-bottom: 16px;
+    line-height: 1.2;
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: 45px;
+    color: #FFFFFF;
+    text-align: center;
+    padding-top: 500px;
 }
 
 .about-us-page .about-upper::before {
@@ -74,12 +49,11 @@
     position: absolute;
     background-color: rgba(0, 0, 0, 0.5);
     bottom: 1px;
-    /* z-index: -1; */
 }
 
-.about-us-page .our-story-heading {
-    margin: 0 10.1px 30px 0;
-    display: inline-block;
+.our-team-heading {
+    margin-block-end: 10px;
+    text-align: center;
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 600;
@@ -87,16 +61,14 @@
     color: #145A98;
 }
 
-.about-us-page .our-story-caption {
-    margin: 0 1px 47px 0;
+.our-team-caption {
     display: inline-block;
     text-align: center;
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 300;
-    font-size: 27px;
+    margin-block-end: 40px;
     color: #3D76AF;
-    width: 1350px;
 }
 
 .about-us-page .rectangle-7 {
@@ -141,166 +113,11 @@
 
 .about-us-page .our-story-section {
     position: relative;
-    margin: 0 58px 129px 59px;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     padding-bottom: 376px;
-    width: fit-content;
     box-sizing: border-box;
 }
 
-.about-us-page .our-values-container-images {
-    border-radius: 503.5px;
-    position: absolute;
-    right: 120px;
-    bottom: 132px;
-    width: 1007px;
-    height: 1007px;
-}
-
-.about-us-page .our-values-heading {
-    margin: 0 0 93px 0px;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 600;
-    font-size: 35px;
-    color: #145A98;
-}
-
-.about-us-page .dreaming-about-future-occupation {
-    background: url('../../assets/vectors/empowerment.svg') 50% / contain no-repeat;
-    position: absolute;
-    left: 0px;
-    bottom: 450px;
-    width: 330px;
-    height: 330px;
-}
-
-.about-us-page .educational-video-for-online-education {
-    background: url('../../assets/vectors/compassion.svg') 50% / contain no-repeat;
-    position: absolute;
-    top: 12px;
-    right: 458px;
-    width: 329px;
-    height: 330px;
-}
-
-.about-us-page .playing-basketball {
-    background: url('../../assets/vectors/integrity.svg') 50% / contain no-repeat;
-    position: absolute;
-    right: -44px;
-    bottom: 450px;
-    width: 330px;
-    height: 330px;
-}
-
-.about-us-page .compassion-section {
-    position: relative;
-    margin: -150px 0 310px 40px;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 600;
-    font-size: 35px;
-    color: #145A98;
-}
-
-.about-us-page .our-values-section {
-    margin: 0px 0 65px 54px;
-    display: inline-block;
-    text-align: center;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 600;
-    font-size: 35px;
-    color: #145A98;
-    width: 230px;
-}
-
-.about-us-page .empowerment-section {
-    position: relative;
-    margin-right: 24px;
-    width: 791px;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 600;
-    font-size: 35px;
-    color: #145A98;
-    margin-bottom: 100px;
-}
-
-.about-us-page .integrity-section {
-    position: relative;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 600;
-    font-size: 35px;
-    color: #145A98;
-    margin-right: 7px;
-}
-
-.about-us-page .empowerment-integrity-section {
-    margin-bottom: 19px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 1174.1px;
-    box-sizing: border-box;
-}
-
-.about-us-page .team-working-on-aproject-together {
-    background: url('../../assets/vectors/collaboration.svg') 50% / contain no-repeat;
-    margin-left: 30px;
-    width: 434px;
-    height: 295px;
-}
-
-.about-us-page .our-values-container-images-without-caption {
-    position: relative;
-    margin-bottom: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 459px 51.9px 0 50px;
-    width: 1276px;
-    box-sizing: border-box;
-}
-
-.about-us-page .collaboration-section {
-    margin-left: 40px;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 600;
-    font-size: 35px;
-    color: #145A98;
-    margin-bottom: -75px;
-    margin-top: 12px;
-}
-
-.about-us-page .our-values-caption {
-    position: absolute;
-    top: 78px;
-    /* right: 180px; */
-    text-align: center;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 300;
-    font-size: 27px;
-    color: #3D76AF;
-    width: 875px;
-}
-
-.about-us-page .our-values-container {
-    position: relative;
-    margin: 0 85px 128px 79px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 1276px;
-    box-sizing: border-box;
-}
 
 .about-us-page .rectangle-26 {
     background: linear-gradient(180deg, rgba(255, 255, 255, 0), #145A98);
@@ -313,8 +130,9 @@
 }
 
 .about-us-page .get-involved-heading {
+    text-align: center;
     position: relative;
-    margin: 0 0.9px 30px 0;
+    margin-block-end: 10px;
     display: inline-block;
     overflow-wrap: break-word;
     font-family: 'Inter';
@@ -325,13 +143,11 @@
 
 .about-us-page .get-involved-caption {
     position: relative;
-    text-align: center;
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 300;
-    font-size: 27px;
     color: #FFFFFF;
-    width: 1050px;
+    text-align: center;
 }
 
 .about-us-page .get-involved-section {
@@ -366,68 +182,6 @@
     color: rgba(255, 255, 255, 0.8);
 }
 
-.about-us-page .lorem-ipsum {
-    margin-bottom: 2px;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-1 {
-    margin-bottom: 2px;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-2 {
-    margin-bottom: 2px;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-3 {
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-4 {
-    margin-bottom: 4px;
-    display: inline-block;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-5 {
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
 .about-us-page .about-donatebtn1 {
     margin: 2px 77.3px 44px 0;
     display: flex;
@@ -438,156 +192,6 @@
 
 .about-us-page .lorem-ipsum-dolor {
     position: relative;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-1 {
-    position: absolute;
-    left: 50%;
-    top: 30px;
-    translate: -50% 0;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-2 {
-    position: absolute;
-    left: 50%;
-    top: 60px;
-    translate: -50% 0;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-3 {
-    position: absolute;
-    left: 50%;
-    bottom: 60px;
-    translate: -50% 0;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-4 {
-    position: absolute;
-    left: 50%;
-    bottom: 31px;
-    translate: -50% 0;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-5 {
-    position: absolute;
-    left: 50%;
-    bottom: 0px;
-    translate: -50% 0;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .about-donatebtn0 {
-    position: relative;
-    margin: 0 76.7px 96px 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 188px;
-    box-sizing: border-box;
-}
-
-.about-us-page .lorem-ipsum-dolor-6 {
-    position: relative;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-7 {
-    position: absolute;
-    left: 50%;
-    top: 30px;
-    translate: -50% 0;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-8 {
-    position: absolute;
-    left: 50%;
-    top: 60px;
-    translate: -50% 0;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-9 {
-    position: absolute;
-    left: 50%;
-    bottom: 60px;
-    translate: -50% 0;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-10 {
-    position: absolute;
-    left: 50%;
-    bottom: 31px;
-    translate: -50% 0;
-    overflow-wrap: break-word;
-    font-family: 'Inter';
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 1.5;
-    color: #FFFFFF;
-}
-
-.about-us-page .lorem-ipsum-dolor-11 {
-    position: absolute;
-    left: 50%;
-    bottom: 0px;
-    translate: -50% 0;
     overflow-wrap: break-word;
     font-family: 'Inter';
     font-weight: 400;
@@ -607,7 +211,6 @@
 }
 
 .about-us-page .about-phone-number {
-    /* margin: 0 54.7px 19px 58px; */
     display: flex;
     flex-direction: row;
     width: fit-content;
@@ -664,7 +267,6 @@
     font-weight: 400;
     font-size: 23px;
     color: #FFFFFF;
-
 }
 
 .about-us-page .email-2 {
@@ -747,8 +349,6 @@
 
 .about-us-page {
     background: #FFFFFF;
-    display: flex;
-    flex-direction: column;
     align-items: center;
     max-width: 100%;
     box-sizing: border-box;
@@ -759,33 +359,113 @@
     height: 950px;
     border-radius: 50%;
     border: 8px dashed #82a8c8;
-    margin-top: 130px;
+    margin-top: 130px
 }
 
-@media (max-width: 768px) {
-    .about-us-page .about-heading {
-        margin-top: -280px;
+.OurValues-caption{
+    text-align: center;
+    overflow-wrap: break-word;
+    font-family: 'Inter';
+    font-weight: 300;
+    margin-block-end: 40px;
+    color: #3D76AF;
+}
+
+/* Prity's Css START from here */
+.ValuePoints-wrapper {
+    position: relative;
+}
+
+.OurValues {
+    margin-block: 100px;
+    padding-inline: 5%;
+}
+
+.Values {
+    height: 600px;
+    width: 600px;
+    border-radius: 50%;
+    border: 2px dashed #145A98;
+    margin: 0 auto;
+    position: relative;
+    list-style: none;
+    animation: circlePath 30s infinite linear;
+    margin-block-start: 80px;
+}
+
+.Values li.ValuePoints {
+    position: absolute;
+    animation: circlePathBack 30s infinite linear;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.Values li.ValuePoints:nth-child(1) {
+    top: -50px;
+    left: 40%;
+}
+
+.Values li.ValuePoints:nth-child(2) {
+    bottom: -50px;
+    left: 40%;
+}
+
+.Values li.ValuePoints:nth-child(3) {
+    left: -50px;
+    top: 40%;
+}
+
+.Values li.ValuePoints:nth-child(4) {
+    right: -50px;
+    top: 40%;
+}
+
+.Values li.ValuePoints .ValueImage {
+    height: 100px;
+    width: 100px;
+}
+
+.Values li.ValuePoints .ValueImage img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+.Values li.ValuePoints p {
+    color: #145A98;
+    font-size: 14px;
+    text-align: center;
+    font-weight: 600;
+}
+
+.ValueHead {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 50%;
+    color: #145A98;
+    font-weight: 600;
+    font-size: 20px;
+}
+
+@keyframes circlePath {
+    0% {
+        transform: rotate(0deg);
     }
 
-    .about-caption {
-        font-size: 18px;
-        /* margin-top: -70px; */
-        width: 350px;
-        padding-top: 30px;
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes circlePathBack {
+    0% {
+        transform: rotate(360deg);
     }
 
-    .about-us-page .get-involved-caption{
-        width: 330px;
-    }
-
-    .about-us-page .our-values-caption{
-        width: 320px;
-    }
-
-    .about-us-page .our-story-caption{
-        width: 350px;
-    }
-    .about-us-page .educational-video-for-online-education{
-        margin-top: 100px;
+    100% {
+        transform: rotate(0deg);
     }
 }
