--- a/frontend/src/Components/Grievance/Grievance.css
+++ b/frontend/src/Components/Grievance/Grievance.css
@@ -49,3 +49,144 @@
     background-color: rgba(0, 0, 0, 0.5);
     bottom: 1px;
 }
+
+.form-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 40px;
+    border-radius: 20px;
+    background-color: #3D76AF;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 100px;
+}
+
+.formheading {
+    text-align: center;
+    color: white;
+    margin-bottom: 50px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.forminput::placeholder {
+    color: #ffffff;
+}
+
+.forminput {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    background-color: #3D76AF;
+    outline: none;
+    color: #ffffff;
+    font-size: 20px;
+}
+
+.formbtn {
+    color: #3D76AF;
+    border: none;
+    padding: 15px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 100px;
+    margin: 0 auto;
+    background-color: #ffffff;
+    font-size: 21px;
+    font-weight: 550;
+    width: 100%;
+    margin-top: 12px;
+}
+
+textarea,
+textarea::placeholder {
+    font-family: 'Inter';
+}
+
+select {
+    border: none;
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    background-color: #3D76AF;
+    outline: none;
+    color: #ffffff;
+    font-size: 20px;
+}
+
+.form-footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-align {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+    margin-top: 60px;
+}
+
+.right-align {
+    flex: 1;
+    text-align: right;
+    justify-content: space-between;
+    margin-top: 60px;
+}
+
+.right-align img {
+    margin: 5px;
+    height: 30px;
+    width: 30px;
+}
+
+@media only screen and (max-width: 767px) {
+    .form-container {
+        padding: 20px 10px;
+        max-width: calc(100% - 24px);
+        margin-block-end: 50px;
+    }
+
+    .forminput {
+        font-size: 14px;
+    }
+
+    .formheading {
+        margin-block-end: 20px;
+    }
+
+    select{
+        font-size: 14px;
+    }
+
+    .formbtn {
+        font-size: 14px;
+    }
+
+    .right-align,
+    .left-align {
+        margin-block-start: 20px;
+    }
+
+    .left-align {
+        font-size: 12px;
+    }
+
+    .right-align img {
+        height: 20px;
+        width: 20px;
+        margin: 2px;
+    }
+
+}
