--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -102,7 +102,8 @@
     font-weight: 500;
     font-size: 16px;
     text-transform: uppercase;
-    border: none
+    border: none;
+    cursor: pointer;
 }
 
 .home-page .hamburger-menu {
