--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -185,10 +185,11 @@
         /* Initially hide the side panel */
         width: 250px;
         height: 100%;
-        background: rgba(0, 0, 0, 0.8);
+        /* background: rgba(0, 0, 0, 0.8); */
+        background: #145A98;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         transition: right 0.3s ease;
-        z-index: 1000;
+        z-index: 100;
     }
 
     .side-panel.open {
