--- a/frontend/src/Components/About/About.css
+++ b/frontend/src/Components/About/About.css
@@ -15,7 +15,7 @@
 
 .about-us-page .about-upper p {
     position: relative;
-    z-index: 2;
+    /* z-index: 2; */
     padding-left: 15%;
     padding-right: 15%;
     display: inline-block;
@@ -30,7 +30,7 @@
 
 .about-us-page .about-upper h2 {
     position: relative;
-    z-index: 2;
+    /* z-index: 2; */
     margin-bottom: 16px;
     line-height: 1.2;
     overflow-wrap: break-word;
