--- a/frontend/src/Components/Service/Service.css
+++ b/frontend/src/Components/Service/Service.css
@@ -14,7 +14,7 @@
 
 .service-upper p {
     position: relative;
-    z-index: 2;
+    /* z-index: 2; */
     padding-left: 15%;
     padding-right: 15%;
     display: inline-block;
@@ -29,7 +29,7 @@
 
 .service-upper h2 {
     position: relative;
-    z-index: 2;
+    /* z-index: 2; */
     margin-bottom: 16px;
     line-height: 1.2;
     overflow-wrap: break-word;
